@@ -8,6 +8,7 @@ Revision 0.4.3, released <TBD>
 - Added RFC3546 providing PkiPath as used in TLS Extensions
 - Added RFC4366 providing PkiPath as used in TLS Extensions
 - Added RFC9399 providing Logotypes in X.509 Certificates
+- Fixed import-related bugs in addon.py for RelativeOID handling
 
 Revision 0.4.2, released 09-01-2023
 -----------------------------------
